2006-08-28 [paul]	0.10.2cvs10

	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/fr.po
	* po/remove-potcdate.sin
	* src/Makefile.am
	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_viewer.c
		require autoconf 2.60, enabling building
		with gettext 0.15 (gettext 0.14.x build still
		possible). Replace Makefiles with versions
		from gettext 0.15.
		Remove configure option --with-localedir. The
		option that is provided directly by autoconf
		2.60 can be used instead: --localedir
		Add missing files in po/
		All thanks to Colin

	* po/fr.po
		updated by Colin

2006-08-27 [colin]	0.10.2cvs9

	* src/gtkhtml2_viewer.c
		Implement plugin_provides()

2006-08-23 [colin]	0.10.2cvs8

	* configure.ac
	* src/gtkhtml2_viewer.c
		Implement get_selection(), which will return
		the selected text

2006-08-21 [colin]	0.10.2cvs7

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_prefs.h
	* src/gtkhtml2_viewer.c
		Implement image cache

2006-08-18 [paul]	0.10.2cvs6

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-17 [colin]	0.10.2cvs5

	* src/gtkhtml2_viewer.c
		Don't verify certificate on https

2006-08-09 [colin]	0.10.2cvs4

	* src/gtkhtml2_viewer.c
		Don't wait for stuff loading if we're
		exiting. Requires SC 2.4.0cvs36

2006-08-09 [colin]	0.10.2cvs3

	* src/gtkhtml2_viewer.c
		- Implement non-blocking I/O (allows switching to 
		  another mail before images are loaded on the
		  current one
		- Add a NoticeView to tell there were images if
		  they weren't loaded for some reason
		Please test :)

2006-08-03 [colin]	0.10.2cvs2

	* src/gtkhtml2_viewer.c
		Use base href in <a> links too

2006-08-03 [colin]	0.10.2cvs1

	* src/gtkhtml2_viewer.c
		Handle base_url property as
		given by libgtkhtml2, for use in
		request_url callback. Why can't
		libgtkhtml2 handle it by itself
		is another question.

2006-08-02 [paul]	0.10.2

	0.10.2 released

2006-06-26 [colin]	0.10.1cvs2

	* src/gtkhtml2_viewer.c